sim-validator-assignment/src/snapshots/sim_validator_assignment__config__tests__collect_seats_for_shard_errors.snap
---
source: src/config.rs
expression: "config.collect_seats_for_shard(4, &seats)"
---
Err(
    "shard_idx 4 is an invalid index for 4 shards",
)
